<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/join_group_activity_margin_top"
    android:orientation="vertical"
    tools:context=".fragments.CreateGroupFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="GROUP NAME"
        android:id="@+id/groupNameTitle"
        android:contentDescription="@string/group_name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/fieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/join_group_edit_text_margin"
        android:hint="@string/FieldName"
        android:contentDescription="@string/FieldName"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/joinPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/join_group_edit_text_margin"
        android:contentDescription="@string/password"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/buttonJoin"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/join_group_edit_text_margin"
        android:layout_height="@dimen/join_group_button_height"
        android:contentDescription="@string/join_group"
        android:text="Join"
        android:textSize="@dimen/join_group_button_sp" />


</LinearLayout>

