<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/create_group_activity_margin_top"
    android:orientation="vertical"
    tools:context=".fragments.CreateGroupFragment">

    <EditText
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/create_group_edit_text_margin"
        android:hint="@string/group_name"
        android:contentDescription="@string/group_name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/create_group_edit_text_margin"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:contentDescription="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/fieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/create_group_edit_text_margin"
        android:hint="@string/FieldName"
        android:contentDescription="@string/FieldName"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/create_group_button_margin"
        android:layout_height="@dimen/create_group_button_height"
        android:text="Create"
        android:contentDescription="@string/create_group"
        android:textSize="@dimen/create_group_button_sp" />

</LinearLayout>

